--- a/src/pages/blog/[...id].astro
+++ b/src/pages/blog/[...id].astro
@@ -5,7 +5,7 @@ import { getCollection, render } from 'astro:content';
 export async function getStaticPaths() {
   const posts = await getCollection('blog');
   return posts.map((post) => ({
-    params: { id: post.id },
+    params: { id: post.id.replace(/\.md$/, '') },
     props: post,
   }));
 }
